objects/PT_Hold__c.object
<CustomObject>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PT_Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Hold_ID__c</fullName>
        <label>Hold ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Hold_Type__c</fullName>
        <label>Hold Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADMIN</fullName>
                </value>
                <value>
                    <fullName>PGA</fullName>
                </value>
                <value>
                    <fullName>HOLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Hold</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PT_Hold_Type__c</columns>
        <columns>PT_Description__c</columns>
        <columns>PT_Hold_ID__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>